Bug 104331 - [r600g] Ogre demo "TutorialUAV01" crash at r600_decompress_color_images
Summary: [r600g] Ogre demo "TutorialUAV01" crash at r600_decompress_color_images
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Drivers/Gallium/r600 (show other bugs)
Version: git
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Default DRI bug account
QA Contact: Default DRI bug account
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-12-19 01:23 UTC by MWATTT
Modified: 2017-12-20 10:04 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
Apitrace of the demo (254.75 KB, application/octet-stream)
2017-12-19 01:23 UTC, MWATTT
Details
Apitrace of the demo (generated on REDWOOD) (256.56 KB, application/octet-stream)
2017-12-19 21:15 UTC, MWATTT
Details
Right texture (2.02 KB, image/png)
2017-12-19 21:24 UTC, MWATTT
Details

Description MWATTT 2017-12-19 01:23:00 UTC
Created attachment 136265 [details]
Apitrace of the demo

This demo requires GLSL 430, so it will only works with mesa git on evergreen. I have this crash with REDWOOD and JUNIPER chips. 

The demo works fine on others drivers (tested on radeonsi and intel).

I've got this while debugging with GDB:
"Thread 1 "Sample_Tutorial" received signal SIGSEGV, Segmentation fault.
r600_decompress_color_images (rctx=rctx@entry=0x7c82b0, 
    images=images@entry=0x7c92b0) at r600_blit.c:420
420			r600_blit_decompress_color(&rctx->b.b, tex,"

I've attached an apitrace. The crash occurs at frame 0, call 2983.

The other Ogre UAV demo (TutorialUAV02), does not have this problem.
Comment 1 Dave Airlie 2017-12-19 05:38:37 UTC
The crash should be fixed in master now.
Comment 2 MWATTT 2017-12-19 21:13:26 UTC
I can confirm that the segfault is gone.

However, the demo does not render properly(I don't know if I should make another report for that).

I'll upload an other trace, as the first one was generated on PITCAIRN and has alignment issue when replaying it on REDWOOD.


The problem seems to be at Frame 0, call 2875: garbage is generated on attached texture on REDWOOD and render fine on PITCAIRN.
Comment 3 MWATTT 2017-12-19 21:15:07 UTC
Created attachment 136302 [details]
Apitrace of the demo (generated on REDWOOD)
Comment 4 MWATTT 2017-12-19 21:24:57 UTC
Created attachment 136303 [details]
Right texture
Comment 5 Michel Dänzer 2017-12-20 10:04:02 UTC
(In reply to MWATTT from comment #2)
> However, the demo does not render properly(I don't know if I should make
> another report for that).

Please do.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.